--- a/trunk/WebRoot/WEB-INF/web.xml
+++ b/trunk/WebRoot/WEB-INF/web.xml
@@ -7,6 +7,17 @@
   <servlet>
     <description>This is the description of my J2EE component</description>
     <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>Test</servlet-name>
+    <servlet-class>Test</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Test</servlet-name>
+    <url-pattern>/servlet/Test</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
     <servlet-name>MX</servlet-name>
     <servlet-class>cn.MX</servlet-class>
   </servlet>
