--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -21,7 +21,7 @@
   
   <filter>
   	<filter-name>lazyLoadingFilter</filter-name>
-  	<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
+  	<filter-class>com.goodfriend.util.MyOpenSessionInViewFilter</filter-class>
   </filter>
   <filter>
   	<filter-name>struts2</filter-name>
