--- a/trunk/WebRoot/WEB-INF/web.xml
+++ b/trunk/WebRoot/WEB-INF/web.xml
@@ -9,33 +9,68 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
-  <context-param>
-  	<param-name>contextConfigLocation</param-name>
-  	<param-value>/WEB-INF/applicationContext.xml,/WEB-INF/applicationContext-*.xml </param-value>
-  </context-param>
-  <listener>
-  	<listener-class>
-  		org.springframework.web.context.ContextLoaderListener
-  	</listener-class>
-  </listener>
+    <!-- 苗欣                                 begin                   -->
+    <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/applicationContext.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>
+			org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+
+
+	<!-- The filter for struts2 -->
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>
+			org.apache.struts2.dispatcher.FilterDispatcher
+		</filter-class>
+	</filter>
+	<!-- The filter mapping for struts2 -->
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+
+	<!-- Http Flex Session attribute and binding listener support -->
+	<!--
+		<listener>
+		<listener-class>flex.messaging.HttpFlexSession</listener-class>
+		</listener>
+	-->
+
+	<!-- MessageBroker Servlet 单独为Flex配置xml-->
+	<servlet>
+		<servlet-name>flex</servlet-name>
+		<servlet-class>
+			org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>
+				/WEB-INF/flex-application-config.xml
+			</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<!--
+	Map all /messagbroker requests to the DispatcherServlet for handling
+	-->
+	<servlet-mapping>
+		<servlet-name>flex</servlet-name>
+		<url-pattern>/spring/*</url-pattern>
+	</servlet-mapping>
+	
+
+
+	
+  <!--              end                         -->
   
-  <filter>
-  	<filter-name>lazyLoadingFilter</filter-name>
-  	<filter-class>com.goodfriend.util.MyOpenSessionInViewFilter</filter-class>
-  </filter>
-  <filter>
-  	<filter-name>struts2</filter-name>
-  	<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
-  </filter>
   
-  <filter-mapping>
-  	<filter-name>lazyLoadingFilter</filter-name>
-  	<url-pattern>*.action</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-  	<filter-name>struts2</filter-name>
-  	<url-pattern>/*</url-pattern>
-  </filter-mapping>
-  
+
+
+
   
 </web-app>
