--- a/trunk/WebRoot/WEB-INF/web.xml
+++ b/trunk/WebRoot/WEB-INF/web.xml
@@ -5,11 +5,11 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
-  
-    <!-- 苗欣                                 begin                   -->
+    <welcome-file-list>
+    	<welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
+	<!-- Spring framework loader -->
     <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/applicationContext.xml</param-value>
@@ -20,8 +20,7 @@
 		</listener-class>
 	</listener>
 
-
-	<!-- The filter for struts2 -->
+	<!-- The struts2 framework loader -->
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>
@@ -31,7 +30,8 @@
 	<!-- The filter mapping for struts2 -->
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
-		<url-pattern>*.action</url-pattern>
+		<url-pattern>/user/*</url-pattern>
+		<url-pattern>/admin/*</url-pattern>
 	</filter-mapping>
 
 	<!-- Http Flex Session attribute and binding listener support -->
@@ -41,7 +41,7 @@
 		</listener>
 	-->
 
-	<!-- MessageBroker Servlet 单独为Flex配置xml-->
+	<!-- MessageBroker Servlet for Flex xml-->
 	<servlet>
 		<servlet-name>flex</servlet-name>
 		<servlet-class>
@@ -61,16 +61,5 @@
 	<servlet-mapping>
 		<servlet-name>flex</servlet-name>
 		<url-pattern>/spring/*</url-pattern>
-	</servlet-mapping>
-	
-
-
-	
-  <!--              end                         -->
-  
-  
-
-
-
-  
+	</servlet-mapping>  
 </web-app>
