--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -44,7 +44,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-context.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-core.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-jdbc.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-orm.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-orm.jar" sourcepath="C:/Documents and Settings/lenovo/.m2/repository/org/springframework/spring-orm/2.5.6/spring-orm-2.5.6-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-tomcat-weaver.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-tx.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-web.jar"/>
