1.新建了com.goodfriend.flexServlet包 2.新建了FileUploadServlet类 它负责接收从flex端上传的图片 修改文件名后再保存到相应文件夹下 3.修改了web.xml文件 增加了对FileUploadServlet的映射.

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -62,4 +62,16 @@
 		<servlet-name>flex</servlet-name>
 		<url-pattern>/spring/*</url-pattern>
 	</servlet-mapping>  
+	
+	<!-- 
+		上传图片的servlet
+	 -->
+	<servlet>
+    	<servlet-name>FileUploadServlet</servlet-name>
+    	<servlet-class>com.goodfriend.flexServlet.FileUploadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+   		<servlet-name>FileUploadServlet</servlet-name>
+    	<url-pattern>/flexServlet/FileUploadServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
