--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,7 +1,7 @@
 ## LOGGERS ##
 #define a logger 
-log4j.rootLogger=DEBUG,console,file
-#log4j.rootLogger=INFO,console,file
+#log4j.rootLogger=DEBUG,console,file
+log4j.rootLogger=INFO,console,file
 
 ## APPENDERS ##
 # define an appender named console, which is set to be a ConsoleAppender
