--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <welcome-file-list>
     	<welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-
+    
 	<!-- Spring framework loader -->
     <context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -74,4 +74,9 @@
    		<servlet-name>FileUploadServlet</servlet-name>
     	<url-pattern>/flexServlet/FileUploadServlet</url-pattern>
     </servlet-mapping>
+    
+     <error-page>
+    	<error-code>404</error-code>
+    	<location>/user/tonotfound.action</location>
+    </error-page>
 </web-app>
